--- a/package.json
+++ b/package.json
@@ -5,21 +5,32 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "firebase-admin": "^9.9.0",
+    "formik": "^2.2.8",
+    "next": "^10.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.2.5",
+    "firebase": "^8.6.2",
+    "husky": ">=6",
     "lint-staged": "^10.2.11",
-    "prettier": "2.0.5"
+    "next-firebase-auth": "^0.13.1",
+    "prettier": "2.0.5",
+    "styled-components": "^5.2.3"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
