--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "faker": "^5.5.3",
+        "faker-br": "^0.4.1",
         "firebase-admin": "^9.9.0",
         "formik": "^2.2.8",
+        "moment": "^2.29.1",
+        "namor": "^2.0.3",
         "next": "^10.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-table": "^7.7.0",
         "reset-css": "^5.0.1"
     },
     "devDependencies": {
