--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-table": "^7.7.0",
-        "reset-css": "^5.0.1"
+        "reset-css": "^5.0.1",
+        "styled-reset": "^4.3.4"
     },
     "devDependencies": {
         "@svgr/webpack": "^5.5.0",
