--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "faker": "^5.5.3",
         "faker-br": "^0.4.1",
         "firebase-admin": "^9.9.0",
