--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@svgr/webpack": "^5.5.0",
+        "babel-plugin-styled-components": "^1.13.1",
         "eslint": "^7.5.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
