--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "lint-staged": "^10.2.11",
         "next-firebase-auth": "^0.13.1",
         "prettier": "2.0.5",
-        "styled-components": "^5.2.3"
+        "styled-components": "^5.2.3",
+        "yup": "^0.32.9"
     },
     "lint-staged": {
         "*.js": "eslint --cache --fix"
