Add lint on staged files on precommit

--- a/package.json
+++ b/package.json
@@ -19,23 +19,28 @@
         "next": "^10.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-is": "^17.0.2",
         "react-table": "^7.7.0",
         "reset-css": "^5.0.1",
         "styled-reset": "^4.3.4"
     },
     "devDependencies": {
+        "@firebase/app-types": "^0.6.2",
         "@svgr/webpack": "^5.5.0",
         "babel-plugin-styled-components": "^1.13.1",
-        "eslint": "^7.5.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.20.3",
+        "eslint": "^7.30.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "firebase": "^8.6.2",
         "husky": ">=6",
         "lint-staged": "^10.2.11",
         "next-firebase-auth": "^0.13.1",
-        "prettier": "2.0.5",
+        "prettier": "^2.3.2",
         "styled-components": "^5.2.3",
         "yup": "^0.32.9"
     },
